feat: get topics endpoint
